# flow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  wnflow.spec
.github/: FUNDING.yml
brand/: wnflow.icns
dev/hooks/: hook-mlx.py  hook-mlx_whisper.py
docs/: index.html  install.sh  security-audit-v0.4.0.md
plans/: v0.4.0-security-hardening.md
poc/: README.md  RESULTS.md  poc_e2e_pipeline.py  poc_fn_key.py  poc_hotkey.py  poc_mlx_whisper.py  poc_nswindow_form.py  poc_pill_window.py  poc_pyinstaller_mlx.py  poc_rumps_pyinstaller.py
scripts/: Install Flow.command  build_dmg.sh  build_logo.sh  check_permissions.sh  fix_umlauts.sh  install.sh  launchd.plist.template
src/wnflow/: __init__.py  __main__.py  app.py  audio_ducker.py  config.py  fn_keymap.py  history_store.py  hotkey.py  i18n.py  login_item.py  main_window.py  menubar.py  mic.py  notify.py  output.py  permissions.py  pill.py  pipeline.py  settings_data.py  settings_window.py  state.py  threading_guard.py
src/wnflow/cleanup/: __init__.py  commands.py  groq_client.py  prompts.py
src/wnflow/stt/: __init__.py  engine.py
src/wnflow/web/: index.html
tests/: test_commands.py  test_config.py  test_config_chmod.py  test_fn_keymap.py  test_groq_client.py  test_history_clear.py  test_hotkey.py  test_hotkey_thread_safety.py  test_i18n.py  test_logging_rotation.py  test_login_item.py  test_mic.py  test_notify_safety.py  test_pipeline.py  test_prompts.py  test_settings_data.py  test_settings_window.py  test_state.py  test_threading_guard.py  test_version_metadata.py
